--- a/src/Portal.Web/Areas/User/Pages/Shared/_Sidebar.cshtml
+++ b/src/Portal.Web/Areas/User/Pages/Shared/_Sidebar.cshtml
@@ -8,7 +8,13 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" asp-page="#" asp-area="admin">
+                <a class="nav-link" asp-page="/posts/index" asp-area="user">
+                    <i class="fa fa-file"></i>
+                    Posts
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-page="#" asp-area="user">
                     <i class="fa fa-users"></i>
                     Payments
                 </a>
@@ -19,7 +25,7 @@
                     Profile
                 </a>
             </li>
-          
+
         </ul>
 
       
