--- a/src/Portal.Web/Areas/User/Pages/Posts/Index.cshtml
+++ b/src/Portal.Web/Areas/User/Pages/Posts/Index.cshtml
@@ -1,4 +1,34 @@
 ﻿@page
 @model Portal.Web.Areas.User.Pages.Posts.IndexModel
 @{
+    ViewData["title"] = "My Posts";
 }
+
+@section toolbar{
+
+    <div class="btn-toolbar mb-2 mb-md-0">
+        <a asp-page="/posts/create" asp-area="user" class="btn btn-primary">New Post</a>
+       
+    </div>
+ }
+
+<table class="table table-borderless table-hover table-striped">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Desc.</th>
+         
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.PostList)
+        {
+            <tr>
+                <td>@item.Name</td>
+                <td>@item.Description</td>
+             
+            </tr>
+        }
+
+    </tbody>
+</table>
