--- a/src/Portal.Web/Areas/User/Pages/Shared/_Layout.cshtml
+++ b/src/Portal.Web/Areas/User/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
 ﻿@inject IConfiguration Configuration
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<Portal.Domain.ApplicationUser> SignInManager
+@inject UserManager<Portal.Domain.ApplicationUser> UserManager
 <!DOCTYPE html>
 
 <html>
@@ -16,7 +19,7 @@
 <body>
     <nav class="navbar navbar-dark sticky-top bg-primary flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" asp-page="/index" asp-area="">
-            @Configuration["Portal:AppName"]
+            @User.Identity.Name
         </a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
