--- a/src/Portal.Web/Pages/Shared/_Navbar.cshtml
+++ b/src/Portal.Web/Pages/Shared/_Navbar.cshtml
@@ -10,6 +10,10 @@
                     <li class="nav-item active">
                         <a class="nav-link" asp-page="index" asp-area="">Home <span class="sr-only">(current)</span></a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" asp-page="posts/index" asp-area="">Posts</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-page="about" asp-area="">About</a>
                     </li>
