--- a/src/Portal.Web/Pages/Posts/Index.cshtml
+++ b/src/Portal.Web/Pages/Posts/Index.cshtml
@@ -19,6 +19,9 @@
             <tr>
                 <td>@item.Name</td>
                 <td>@item.Description</td>
+                <td>
+                    <a asp-page="/posts/details" asp-area="" asp-route-id="@item.Id" class="btn btn-primary">Details</a>
+                </td>
                
 
             </tr>
