--- a/src/Portal.Web/Pages/Shared/_Navbar.cshtml
+++ b/src/Portal.Web/Pages/Shared/_Navbar.cshtml
@@ -12,7 +12,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" asp-page="posts/index" asp-area="">Posts</a>
+                        <a class="nav-link" asp-page="/posts/index" asp-area="">Posts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-page="about" asp-area="">About</a>
